# x25519

./: .rubocop.yml  .travis.yml  CHANGELOG.md  CHANGES.md  CMakeLists.txt  Gemfile  LICENSE  README.md  Rakefile  appveyor.yml  designers  implementors  x25519.gemspec
.github/workflows/: ci.yml
apps/bench/: bench.c  bench.h  bench_fp25519_x64.c  bench_fp448_x64.c  bench_x25519.c  bench_x448.c  clocks.c  clocks.h
apps/samples/: samples.c
apps/tests/: test_fp25519_x64.c  test_fp448_x64.c  test_x25519.c  test_x448.c  tests.c  tests.h
ext/x25519/: cputest.c  extconf.rb  fp25519_x64.h  random.h  rfc7748_precompted.h  rfc7748_precomputed.c  x25519.c  x25519.h  x25519_x64.c
ext/x25519/ref10/: base.c  fe_add.c  fe_copy.c  fe_cswap.c  fe_sq.c  fe_tobytes.c  scalarmult.c
ext/x25519/rfc7748_precomputed/: fp25519_x64.c  fp25519_x64.h  x25519_x64.c  (+2 more)
ext/x25519_precomputed/: extconf.rb  fp25519_x64.c  fp25519_x64.h  table_ladder_x25519.h  x25519_precomputed.c  x25519_precomputed.h  x25519_x64.c
ext/x25519_ref10/: base.c  extconf.rb  fe.c  fe.h  fe_frombytes.c  fe_mul.c  fe_mul121666.c  fe_sub.c  scalarmult.c  x25519_ref10.c  x25519_ref10.h
include/: bytes.h  fp448_x64.h  table_ladder_x448.h
lib/: x25519.bundle  x25519.rb
lib/x25519/: montgomery_u.rb  precomputed_not_available.rb  scalar.rb  test_vectors.rb  version.rb
spec/: spec_helper.rb  x25519_spec.rb
spec/support/: provider_examples.rb  test_vectors.rb
spec/x25519/: montgomery_u_spec.rb  precomputed_spec.rb  ref10_spec.rb  scalar_spec.rb
src/: bytes.c  fp25519_x64.c  fp448_x64.c  random.c  x25519_x64.c  x448_x64.c
(+2 files in other folders)
